--- a/app/src/main/res/layout/activity_new_entry.xml
+++ b/app/src/main/res/layout/activity_new_entry.xml
@@ -62,7 +62,7 @@
             android:id="@+id/ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="nextWord"
+            android:onClick="displayRandomWord"
             android:text="@string/next_word" />
 
     </LinearLayout>
