--- a/app/src/main/res/layout/activity_signin_or_up.xml
+++ b/app/src/main/res/layout/activity_signin_or_up.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="de.jjff.flooose.memorypop.SigninOrUpActivity">
+    tools:context="de.jjff.flooose.memorypop.SigninOrUpActivity"
+    >
 
     <include layout="@layout/content_signin_or_up" />
 
